Updated layout and styles

--- a/other-pages/About yc/index.html
+++ b/other-pages/About yc/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <link rel="icon" type="png" href="../../images/header-img.png" />
     <link rel="stylesheet" href="media.css" />
@@ -419,19 +419,29 @@
         <p class="copy-p">Follow us</p>
         <div class="copy-icon">
           <span>
-            <i class="fab fa-facebook-f"></i>
+            <a href="https://web.facebook.com/?_rdc=1&_rdr#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/">
+              <i class="fab fa-instagram"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-tiktok"></i>
+            <a href="https://www.tiktok.com/en/">
+              <i class="fab fa-tiktok"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/login">
+              <i class="fab fa-linkedin"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/">
+              <i class="fab fa-x-twitter"></i>
+            </a>
           </span>
         </div>
         <div class="copy text">
