--- a/other-pages/restuarants/index.html
+++ b/other-pages/restuarants/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="icon" type="png" href="../../images/header-img.png" />
     <script defer src="app.js"></script>
+    <link rel="stylesheet" href="media.css">
   </head>
   <body>
     <header>
@@ -122,7 +123,7 @@
                     <i class="fa-brands fa-google-play"></i>
                   </div>
                   <div class="banner-font-text">
-                    <p>Download on the <span>App store</span></p>
+                    <p>Download on  <span>Play store</span></p>
                   </div>
                 </a>
               </div>
@@ -210,7 +211,7 @@
                     <i class="fa-brands fa-google-play"></i>
                   </div>
                   <div class="banner-font-text">
-                    <p>Download on the <span>App store</span></p>
+                    <p>Download on  <span>Play store</span></p>
                   </div>
                 </a>
               </div>
@@ -223,19 +224,29 @@
         <p class="copy-p">Follow us</p>
         <div class="copy-icon">
           <span>
-            <i class="fab fa-facebook-f"></i>
+            <a href="https://web.facebook.com/?_rdc=1&_rdr#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/">
+              <i class="fab fa-instagram"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-tiktok"></i>
+            <a href="https://www.tiktok.com/en/">
+              <i class="fab fa-tiktok"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/login">
+              <i class="fab fa-linkedin"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/">
+              <i class="fab fa-x-twitter"></i>
+            </a>
           </span>
         </div>
         <div class="copy text">
