--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="./style/media.css" />
     <script defer src="./js/app.js"></script>
     <link rel="icon" type="png" href="./images/header-img.png" />
-    <link rel="stylesheet"   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+
     <title>YumCart</title>
   </head>
   <body>
@@ -561,7 +564,7 @@
                     <i class="fa-brands fa-google-play"></i>
                   </div>
                   <div class="banner-font-text">
-                    <p>Download on the <span>App store</span></p>
+                    <p>Download on the <span>Play store</span></p>
                   </div>
                 </a>
               </div>
@@ -574,19 +577,29 @@
         <p class="copy-p">Follow us</p>
         <div class="copy-icon">
           <span>
-            <i class="fab fa-facebook-f"></i>
+            <a href="https://web.facebook.com/?_rdc=1&_rdr#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/">
+              <i class="fab fa-instagram"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-tiktok"></i>
+            <a href="https://www.tiktok.com/en/">
+              <i class="fab fa-tiktok"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/login">
+              <i class="fab fa-linkedin"></i>
+            </a>
           </span>
           <span>
-            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/">
+              <i class="fab fa-x-twitter"></i>
+            </a>
           </span>
         </div>
         <div class="copy text">
