Updated layout and styles

--- a/other-pages/About yc/index.html
+++ b/other-pages/About yc/index.html
@@ -103,7 +103,7 @@
             <source src="./images/aboutfc.mp4" type="video/mp4" />
           </video>
         </div>
-        <div class="video-texts">
+        <!-- <div class="video-texts">
           <div class="text1">
             <h3><span>3m+</span></h3>
             <h3>meals delivered</h3>
@@ -112,9 +112,19 @@
             <h3><span>300+</span></h3>
             <h3>jobs created</h3>
           </div>
+        </div> -->
+        <div class="text-video">
+          <div class="text1">
+            <h3><span>3m+</span></h3>
+            <h3>meals delivered</h3>
+        </div>
+        <div class="text1">
+          <h3><span>300+</span></h3>
+          <h3>jobs created</h3>
         </div>
       </div>
     </div>
+  </div>
 
     <div class="mission-cont">
       <div class="mission">
