--- a/other-pages/About yc/index.html
+++ b/other-pages/About yc/index.html
@@ -214,106 +214,8 @@
         <h2>Good Food, Good People</h2>
         <h3>Meet the Team</h3>
       </div>
-      <div class="sliding-images">
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person1.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>janet arisah</h3>
-            <p>engineering manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person2.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>Valantine okoli</h3>
-            <p>Assistant manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person3.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>philip osilama</h3>
-            <p>senior asset & facility manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person4.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>emmanuel adebayo</h3>
-            <p>HR & admin manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person5.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>uche ajodo</h3>
-            <p>marketing operations manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person6.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>moyosore agibode</h3>
-            <p>data team lead manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/img8.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>precious nnodim</h3>
-            <p>senior accountant</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person1.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>janet arisah</h3>
-            <p>engineering manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person1.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>janet arisah</h3>
-            <p>engineering manager</p>
-          </div>
-        </div>
-
-        <div class="slide1">
-          <div class="slide-img">
-            <img src="./images/person1.webp" alt="img" />
-          </div>
-          <div class="slide-text">
-            <h3>janet arisah</h3>
-            <p>engineering manager</p>
-          </div>
-        </div>
+      <div class="sliding-images" id="slider">
+    
       </div>
     </div>
     <div class="background">
